[lworld] C1's substitutability check does not respect UseCompressedClassPointers

XMLWordPrintable

      --- a/src/hotspot/cpu/x86/c1_LIRAssembler_x86.cpp
      +++ b/src/hotspot/cpu/x86/c1_LIRAssembler_x86.cpp
      @@ -2078,7 +2078,7 @@ void LIR_Assembler::emit_opSubstitutabilityCheck(LIR_OpSubstitutabilityCheck* op
           Register left_klass_op = op->left_klass_op()->as_register();
           Register right_klass_op = op->right_klass_op()->as_register();
       
      - if (UseCompressedOops) {
      + if (UseCompressedClassPointers) {

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: