8257674: [lworld] C1's substitutability check does not respect UseCompressedClassPointers